parser/tests/bad/stmt01.st
% 'return' statement can only appear in the body of 'procedure's

begin
  var i := 1
  return
end
